# opengl-water

./: .gitmodules  CMakeLists.txt  README.md
Libs/GLAD/: CMakeLists.txt
Libs/GLAD/include/glad/: glad.h
Libs/GLAD/src/: glad.c
Source/: App.cpp  App.h  CMakeLists.txt  main.cpp
Source/ExampleObjects/: CubeObject.cpp  CubeObject.h  Plane.cpp  Plane.h  Skybox.cpp  Skybox.h
Source/OpenGLObjects/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  SSBO.cpp  SSBO.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Source/Shaders/: Skybox.vert  WaterShader.frag  WaterShader.vert  cube.frag  cube.vert  simple.frag  simple.vert
